force-app/main/default/objects/Homework__c/Homework__c.object-meta.xml
<CustomObject>
    <label>Homework</label>
    <nameField>
        <displayFormat>HW-{0000}</displayFormat>
        <label>Homework Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Homeworks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>