force-app/main/default/objects/Homework__c/fields/Completed_Questions__c.field-meta.xml
<CustomField>
    <fullName>Completed_Questions__c</fullName>
    <label>Completed Questions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>