force-app/main/default/objects/Homework__c/fields/Correct_Answers__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answers__c</fullName>
    <label>Correct Answers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>