force-app/main/default/objects/Homework__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lesson</label>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Homeworks</relationshipLabel>
    <relationshipName>Homeworks</relationshipName>
    <type>Lookup</type>
</CustomField>