force-app/main/default/objects/Homework__c/fields/Student_Comment__c.field-meta.xml
<CustomField>
    <fullName>Student_Comment__c</fullName>
    <label>Student Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>