force-app/main/default/objects/Homework__c/fields/Teacher_Comment__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Comment__c</fullName>
    <label>Teacher Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>