force-app/main/default/objects/Homework__c/fields/Wrong_Answers__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Answers__c</fullName>
    <label>Wrong Answers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>